--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       }
       .input {
         display: flex;
-        width: 80vw;
+        width: 100%;
         justify-content: center;
       }
       input {
@@ -61,7 +61,7 @@
         margin-top: 10vh;
       }
       .company {
-        width: 80vw;
+        width: 100%;
         height: max-content;
         display: flex;
         flex-direction: column;
@@ -98,6 +98,25 @@
       b {
         font-size: 0.95em;
         margin-right: 2vw;
+      }
+      @media all and (max-width: 600px) {
+        .wrapper {
+          width: 90vw;
+          padding: 10vh 5vw;
+        }
+        .company-details {
+          font-size: 0.9em;
+          width: 90vw;
+        }
+        .company {
+          margin-bottom: 7vh;
+        }
+        .project-details {
+          width: 85vw;
+        }
+        .name {
+          word-break: break-word;
+        }
       }
     </style>
   </head>
