--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       body {
         margin: 0;
         padding: 0;
-        background-color: #0c0c0c;
+        background-color: #0b0c10;
         overflow-x: hidden;
-        color: white;
+        color: #c5c6c7;
         font-family: Poppins;
       }
       .wrapper {
@@ -24,7 +24,7 @@
         width: 80vw;
         height: auto;
         padding: 10vh 10vw;
-        background-color: #0c0c0c;
+        background-color: #0b0c10;
       }
       .input {
         display: flex;
@@ -32,31 +32,29 @@
         justify-content: center;
       }
       input {
-        background-color: #0c0c0c;
-        color: white;
-        border: 2px solid white;
+        background-color: transparent;
+        color: #c5c6c7;
+        border: 3px solid #45a29e;
         padding: 2vh 3vw;
         border-radius: 4px;
 
         font-weight: bold;
       }
-      .input:focus {
+      input:focus {
         outline: none;
       }
       .submit {
         margin-left: 2vw;
-        background-color: #0c0c0c;
-        color: white;
-        border: 2px solid white;
+        background-color: transparent;
+        color: #c5c6c7;
+        border: 3px solid #45a29e;
         padding: 2vh 3vw;
         border-radius: 4px;
         cursor: pointer;
         font-weight: bold;
+        /* box-shadow: 1px 1px 7px 0px #1f2833; */
       }
-      .submit:hover {
-        background-color: white;
-        color: black;
-      }
+
       .results {
         margin-top: 10vh;
       }
@@ -73,7 +71,7 @@
         font-size: 1.1em;
         font-weight: bold;
         width: 80vw;
-        border: 2px solid white;
+        border: 2px solid #45a29e;
         border-radius: 4px;
         padding: 2vh 0;
       }
@@ -87,17 +85,19 @@
         font-size: 0.7em;
         display: flex;
         flex-direction: column;
-        border-left: 2px solid white;
+        border-left: 2px solid #45a29e;
         padding-left: 5vw;
       }
       .project-details > div {
         margin-top: 2vh;
         width: 75vw;
         height: max-content;
+        color: #8d8e8f;
       }
       b {
         font-size: 0.95em;
         margin-right: 2vw;
+        color: #c5c6c7 !important;
       }
       @media all and (max-width: 600px) {
         .wrapper {
