--- a/index.html
+++ b/index.html
@@ -165,6 +165,12 @@
         .name {
           word-break: break-word;
         }
+        select {
+          width: 30vw;
+        }
+        input {
+          width: 40vw;
+        }
       }
     </style>
   </head>
